fix hibernate jar dependency error, configured simple dao test cases